[project]
name = "neewer-obs-bridge"
version = "0.1.0"
description = "Bridge OBS Studio scene changes to a Neewer 660 Pro RGB light over BLE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "obsws-python>=1.7",
    "bleak>=0.22",
]

[project.scripts]
neewer-obs-bridge = "neewer_obs_bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/neewer_obs_bridge.py"]
sources = ["src"]
